Fixed some spacing and alignment bugs in desktop and mobile views

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -25,6 +25,16 @@ a {
 	color:#4a4a4a;
 }
 
+hr {
+	color:white;
+	background:white;
+	width:85%;
+	height:2.5px;
+	border:none;
+	margin-bottom:25px;
+	z-index:10;
+}
+
 .items a {
 	color:#4BC8C6;
 	font-weight: 700;
@@ -110,7 +120,7 @@ a {
 	width: 400px;
 	height: 400px;
 	overflow:hidden;
-	top:50%;
+	top:60%;
 	margin-top:-300;
 	position:relative;
 	float:right;
@@ -227,7 +237,15 @@ a {
 }
 
 #chevron {
-	display:none;
+	display:block;
+	height:60px;
+	width:80px;
+	position:absolute;
+	left:50%;
+	top:90%;
+	margin-left:-40px;
+	z-index:500;
+	transition:.3s;
 }
 
 #chevron2 {
@@ -314,13 +332,12 @@ hr {
 #aboutme {
 	margin-left:0;
 	width:auto;
-	height:425;
-	top:100px;
-	left:50%;
+	height:400;
+	top:22%;
+	left:55%;
 	color:white;
 	font-size:22px;
 	line-height:1.5;
-	padding:10px;
 	text-align:center;
 	z-index:6;
 	position:absolute;
@@ -344,7 +361,7 @@ hr {
 #welcome {
 /*	margin-right: auto;*/
 	width: 180px;
-	top: 100px;
+	top: 25%;
 	float: left;
 	margin-left: 18%;
 	color: white;
@@ -533,7 +550,7 @@ hr {
 	width: 200px;
 	height: 200px;
 	overflow:hidden;
-	top:8%;
+	top:0%;
 	margin-bottom:40px;
 	position:absolute;
 	left:50%;
@@ -665,11 +682,11 @@ hr {
 	display:block;
 	height:60px;
 	width:80px;
-	bottom:20px;
 	position:absolute;
 	left:50%;
+	top:90%;
 	margin-left:-40px;
-	z-index:5;
+	z-index:500;
 	transition:.3s;
 }
 
@@ -707,20 +724,10 @@ hr {
 	height:32px;
 	text-align: center;
 	color:white;
-	font-size:18px;
+	font-size:14px;
 	z-index:100;
 	position:absolute;
 	bottom:10%;
-}
-
-hr {
-	color:white;
-	background:white;
-	width:85%;
-	height:2.5px;
-	border:none;
-	margin-bottom:25px;
-	z-index:10;
 }
 
 #bicycle {
@@ -781,42 +788,37 @@ hr {
 
 #aboutme {
 	width:100%;
-	top:50%;
 	color:white;
 	font-size:15px;
 	line-height:1.5;
-/*	border: 3px solid white;
-	border-radius:12px;*/
-	padding:10;
+	top:55%;
 	text-align:center;
 	position:absolute;
+	z-index: 1000;
 }
 
 #left-col {
 	float:left;
 	text-align: right;
-	width:48%;
+	width:51%;
 	position:relative;
 }
 
 #right-col {
 	float:right;
 	text-align: left;
-	width:48%;
+	width:46%;
 	position:relative;
 }
 
 #welcome {
 	left:50%;
-	margin-left:-80;
-	width:260;
-	top: 280px;
+	margin-left:-70;
+	width:200;
+	top: 35%;
 	color: white;
 	font-size: 20px;
 	line-height: 2;
-/*	border: 3px solid white;
-	border-radius: 12px;*/
-	padding: 10px;
 	text-align: left;
 	z-index: 6;
 	position: absolute;
@@ -938,7 +940,7 @@ li {
 	/*opacity:.85;*/
 	top:60;
 	width:100%;
-	min-height:620px;
+	min-height:630px;
 	/*height:100%;*/
 	overflow:hidden;
 	position:relative;
@@ -978,8 +980,9 @@ li {
 }
 
 #main {
-	min-height:620px;
+	min-height:630px;
 	height:100%;
+	background-color:#1C1C1C;
 }
 
 #menu-section {
@@ -991,7 +994,7 @@ li {
 
 #contact {
 	background-color:#1C1C1C;
-	min-height:660px;
+	min-height:630px;
 	height:100%;
 	z-index:19;
 	position:relative;
